--- a/index.html
+++ b/index.html
@@ -165,6 +165,6 @@
         <div class="progress"></div>
     </div>
     
-<script src="App.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
